--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 10px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +10,30 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+li {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.link-list {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0;
+}
+
+.form-container {
+  display: flex;
+  width: 600px;
+  flex-direction: column;
+  & > * {
+    margin-bottom: 10px !important;
+  }
+}
+
+.actions {
+  & > * {
+    margin-right: 5px !important;
+  }
 }
